# debate

./: README.md  app.py  pyproject.toml  requirements.txt
src/debate/: crew.py  main.py
src/debate/config/: agents.yaml  tasks.yaml
